Summary of important user-visible changes for releases of the signal package

===============================================================================
signal-1.1.4   Release Date: 2012-XX-XX   Release Manager:
===============================================================================

 ** signal is no longer dependent on the image package.

 ** signal is now dependent on the general package.

===============================================================================
signal-1.1.3   Release Date: 2012-05-12   Release Manager: Carnë Draug
===============================================================================

 ** signal is no longer dependent on the audio package.

 ** signal is now dependent on the image package.

 ** The function `marcumq' was imported from the communications package and has
    been completely rewritten to improve performance and fix computational
    errors.

 ** Package is no longer automatically loaded.

 ** The functions `__ellip_ws' and `__ellip_ws_min' have been removed (they
    are now subfunctions of `ncauer'.

 ** The function `blackmanharris' was fixed to have even symmetry.

===============================================================================
signal-1.1.2   Release Date: 2012-01-06   Release Manager: Lukas Reichlin
===============================================================================

 * Added the following filter conversion functions:
    ss2tf
    ss2zp
    tf2ss
    tf2zp
    zp2ss
    zp2tf

===============================================================================
signal-1.1.1   Release Date: 2011-11-06   Release Manager: Juan Pablo Carbajal
===============================================================================

 * Following function now show help text correctly instead of copyright notice:
    downsample
    dst
    flattopwin
    fwhm
    idst
    square
    upsample
 * Apply pathc by Paul Dreik to cl2bp_lib.h.
